--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,12 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-
     <title>Study Group</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="AthensBackground">
+      <div class="TransparentBackground" id="root"></div>
+    </div>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
